# mimic

./: .codedocs  .gitignore  .travis.yml  AUTHORS  COPYING  Doxyfile  Makefile.am  README.md  TODO  _config.yml  about.md  configure.ac  notes.txt
_layouts/: default.html  post.html
_posts/: 2016-09-20-so-it-begins.markdown  2017-04-03-i-have-a-cunning-plan.markdown  2017-04-06-string-encodings.markdown  2017-04-11-piece-by-piece.markdown
m4/: ax_cxx_have_filesystem.m4  ax_cxx_have_optional.m4  ax_cxx_have_variant.m4
src/: ClassFile.cpp  ClassFile.h  ClassValidator.cpp  ClassValidator.h  Common.h  ConstantPool.cpp  ConstantPool.h  FieldDescriptor.cpp  FieldDescriptor.h  JDouble.h  JFloat.h  JLong.h  JUtf8String.cpp  JUtf8String.h  MethodDescriptor.cpp  MethodDescriptor.h  Mimic.cpp  Utf8String.cpp  Utf8String.h  class_attributes.h  code_attributes.h  common_attributes.h  field_attributes.h  method_attributes.h
src/parsing/: ByteConsumer.cpp  ByteConsumer.h  ParseFailureException.h
src/test/: ClassFile_test.cpp  ClassValidator_test.cpp  FieldDescriptor_test.cpp  JUtf8String_test.cpp  MethodDescriptor_test.cpp  MimicTest.cpp  TestCommon.h  Utf8String_test.cpp
src/test/gmock/: gmock.h
src/test/parsing/: ByteConsumer_test.cpp  ClassFile_test.cpp
